[gd_scene load_steps=10 format=3 uid="uid://c6sfxjhyepbld"]

[ext_resource type="Texture2D" uid="uid://bewf6l6ddl2tn" path="res://Personagens/Assets/slime.png" id="1_1ss0r"]
[ext_resource type="Script" path="res://Personagens/Scripts/Gosma.gd" id="1_mkd31"]

[sub_resource type="Animation" id="Animation_37fu0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8diep"]
resource_name = "idle_gosma"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8l1bn"]
resource_name = "morte_gosma"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_y24pm"]
resource_name = "walking_gosma"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lv06n"]
_data = {
"RESET": SubResource("Animation_37fu0"),
"idle_gosma": SubResource("Animation_8diep"),
"morte_gosma": SubResource("Animation_8l1bn"),
"walking_gosma": SubResource("Animation_y24pm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0s6ai"]
size = Vector2(17, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_w4cda"]
radius = 56.1427

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation") groups=["enemy"]]
script = ExtResource("1_mkd31")
_texture = NodePath("Slime_Sprite")
_animation = NodePath("Animação")

[node name="Slime_Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_1ss0r")
flip_h = true
hframes = 7
vframes = 5

[node name="Animação" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lv06n")
}

[node name="Colisão_Corpo" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_0s6ai")

[node name="Detecção_Personagem" type="Area2D" parent="."]

[node name="Colisão_Area" type="CollisionShape2D" parent="Detecção_Personagem"]
show_behind_parent = true
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_w4cda")

[connection signal="animation_finished" from="Animação" to="." method="_on_animação_animation_finished"]
[connection signal="body_entered" from="Detecção_Personagem" to="." method="_on_detecção_personagem_body_entered"]
[connection signal="body_exited" from="Detecção_Personagem" to="." method="_on_detecção_personagem_body_exited"]
